# asmo-personas

./: .env.example  .gitignore  README.md  docker-compose.yml
alita/: Dockerfile  pyproject.toml
alita/scripts/: label_training.py
alita/src/: __init__.py  bot.py  main.py  persona.py  scheduler.py
alita/src/db/: __init__.py  manager.py  models.py  training_logger.py
alita/src/pubsub/: __init__.py  handlers.py  subscriber.py
alita/src/tools/: __init__.py  anytype.py  calendar.py  fetch_url.py  home_assistant.py  long_term_memory.py  memory.py  spotify.py  stocks.py  weather.py  web_search.py
causality/: Dockerfile  pyproject.toml
causality/src/: hardware.py  main.py  subscriber.py
causality/src/db/: manager.py
causality/src/static/: index.html
commons/: pyproject.toml
commons/asmo_commons/: __init__.py
commons/asmo_commons/api/: __init__.py  engine.py
commons/asmo_commons/causality/: client.py
commons/asmo_commons/config/: __init__.py  settings.py
commons/asmo_commons/discord/: __init__.py  base_bot.py
commons/asmo_commons/llm/: ollama_client.py
commons/asmo_commons/pubsub/: __init__.py  redis_client.py
commons/asmo_commons/tools/: __init__.py  executor.py  registry.py
femto/: Dockerfile  pyproject.toml
femto/src/: __init__.py  bot.py  main.py  persona.py  scheduler.py
femto/src/tools/: __init__.py  disk_health.py  docker_status.py  gpu_metrics.py  log_analyzer.py  network_monitor.py  system_metrics.py
giorgio/: Dockerfile  pyproject.toml
giorgio/src/: __init__.py  bot.py  main.py  persona.py
giorgio/src/db/: models.py  service.py
giorgio/src/tools/: __init__.py  jellyfin_client.py  library_index.py  recommendations.py  stats_tools.py
giorgio/src/webhooks/: app.py  schemas.py
olympus/: Dockerfile  pyproject.toml
olympus/frontend/: index.html  package.json  vite.config.js
olympus/frontend/src/: App.vue
olympus/frontend/src/assets/: styles.css
olympus/frontend/src/components/: ChatArea.vue  ConversationItem.vue  ConversationList.vue  FeedbackButtons.vue  FeedbackModal.vue  InputBar.vue  MessageBubble.vue  PersonaAvatar.vue  PersonaSelector.vue  PortfolioWidget.vue  Sidebar.vue  TypingIndicator.vue
olympus/frontend/src/composables/: useImageUpload.js  useVoiceRecorder.js  useWebSocket.js
olympus/frontend/src/stores/: chat.js  conversation.js  persona.js
olympus/src/: main.py
olympus/src/db/: manager.py
olympus/src/personas/: alita.py  base.py  femto.py  giorgio.py
olympus/src/routers/: chat.py  conversations.py  feedback.py  personas.py  portfolio.py  voice.py
olympus/src/stt/: whisper.py
scripts/: init_redis.py
