[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alita-bot"
version = "0.1.0"
description = "ALITA — briefing & life assistant bot"
requires-python = ">=3.11"
dependencies = [
    "asmo-commons",
    "discord.py>=2.3.0",
    "structlog>=23.3.0",
    "aiohttp>=3.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
