[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alita-bot"
version = "1.0.0"
description = "ALITA — personal assistant bot"
requires-python = ">=3.11"
dependencies = [
    "asmo-commons",
    "discord.py>=2.3.0",
    "structlog>=23.3.0",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.19.0",
    "yfinance>=0.2.30",
    "spotipy>=2.23.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "redis[hiredis]>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
