[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asmo-commons"
version = "0.1.0"
description = "Shared library for ASMO Personas bots"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "redis[asyncio]>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=23.3.0",
    "discord.py>=2.3.0",
    "tenacity>=8.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["asmo_commons"]
