[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "giorgio-bot"
version = "0.1.0"
description = "GIORGIO — media & culture bot"
requires-python = ">=3.11"
dependencies = [
    "asmo-commons",
    "discord.py>=2.3.0",
    "structlog>=23.3.0",
    "aiohttp>=3.9.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "numpy>=1.26.0",
    "aiosqlite>=0.19.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
